--- a/package.json
+++ b/package.json
@@ -41,19 +41,18 @@
         "@babel/preset-env": "^7.2.3",
         "bcrypt-nodejs": "^0.0.3",
         "body-parser": "^1.18.3",
+        "cookie-parser": "^1.4.4",
         "cors": "^2.8.5",
         "debug": "^4.1.1",
         "dotenv": "^6.2.0",
         "ejs": "^2.6.1",
         "express": "^4.16.4",
-        "express-session": "^1.15.6",
         "jsonwebtoken": "^8.3.0",
         "mongoose": "^5.4.4",
         "morgan": "^1.9.0",
         "passport": "^0.4.0",
         "passport-local": "^1.0.0",
-        "rimraf": "^2.6.3",
-        "session-file-store": "^1.2.0"
+        "rimraf": "^2.6.3"
     },
     "devDependencies": {
         "@babel/register": "^7.0.0",
