chore: update ci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,12 @@
-# Javascript Node CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
-#
+# Environment configuration
+env_default: &env_default
+    working_directory: ~/desc
+    docker:
+        - image: circleci/node:lts
 version: 2
 jobs:
     build:
-        docker:
-            # specify the version you desire here
-            - image: circleci/node:8.11.3-stretch-browsers
-
+        <<: *env_default
         steps:
             - checkout
 
@@ -26,13 +24,12 @@ jobs:
                   paths:
                       - 'node_modules'
 
-            # run tests!
-            - run: yarn test
+            - run:
+                  name: Run API test suite
+                  command: yarn test
 
     deploy:
-        docker:
-            # specify the version you desire here
-            - image: circleci/node:8.11.3-stretch-browsers
+        <<: *env_default
         steps:
             - checkout
             - run:
